kubernetes/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: acdc-static-image
spec:
  replicas: 1
  selector:
    matchLabels:
      app: acdc-static-image
  template:
    metadata:
      labels:
        app: acdc-static-image
    spec:
      containers:
        - name: acdc-static-image
          image: mailinenguyen/acdc-static-image:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
        - name: acdc-static-image
          image: nginx
          volumeMounts:
          - name: nginx-html
            mountPath: /usr/share/nginx/html/
      volumes:
      - name: nginx-html
        configMap:
          name: nginx-html
      restartPolicy: Always
