kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: acdc-static-image
spec:
  type: LoadBalancer
  selector:
    app: acdc-static-image
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  clusterIP: 10.0.171.239
  loadBalancerIP: 78.11.24.19
status:
  loadBalancer:
    ingress:
    - ip: 146.148.47.155
