kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: acdc-static-image
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - acdc-static-image.demo.insee.io
  rules:
    - host: acdc-static-image.demo.insee.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: acdc-static-image
                port:
                  number: 80
